Fix problem with case-sensitive filesystem

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include Pytwcla/UserConfig/api.ini
-include Pytwcla/KeyData/empty.txt
+include Pytwcla/userconfig/api.ini
+include Pytwcla/keydata/empty.txt
